add: order service's empty exception

--- a/user-m-service.yml
+++ b/user-m-service.yml
@@ -6,4 +6,5 @@ spring:
 
 order_service:
   url: http://ORDER-M-SERVICE/order-m-service/%s/orders
-  
+  exception:
+    order_empty: There is no item.
