--- a/application.yml
+++ b/application.yml
@@ -5,8 +5,8 @@ spring:
   rabbitmq:
     host: rbmq
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
     stream:
       port: 5552
       username: admin
