fix: eureka default url

--- a/application.yml
+++ b/application.yml
@@ -12,7 +12,6 @@ spring:
       username: admin
       password: admin
       host: rbmq
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -32,7 +31,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://discovery-m-service:8761/eureka
+      defaultZone: http://discovery-m-service:8761/eureka/
       
 logging:
   pattern:
